src/test/deca/syntax/valid/provided/include.deca
#include "to_be_included.deca"

{println("exists");}
