src/test/deca/syntax/invalid/provided/include_invalid.deca
#include "doesnt_exist.deca"

{println("doenst exist");}
